--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -1,24 +1,46 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout1}">
 <head>
     <meta charset="UTF-8">
     <title>Product</title>
-    <link rel="stylesheet" type="text/css" href="webjars/bootstrap/5.3.5/css/bootstrap.min.css">
 </head>
 <body>
-   <div class="p-3">
-       <table class="table table-hover">
-           <thead>
-             <th>ID</th><th>Name</th><th>Price</th><th>Quantity</th>
-           </thead>
-           <tbody> <tr th:each="p:${productList}">
-               <td th:text="${p.id}"></td>
-               <td th:text="${p.name}"></td>
-               <td th:text="${p.price}"></td>
-               <td th:text="${p.quantity}"></td>
-           </tr>
-           </tbody>
-       </table>
-   </div>
+<div class="p-3" layout:fragment="content">
+    <div class="p-3">
+         <a class="btn btn-primary" th:href="@{/newProduct}">New Product</a>
+
+    </div>
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Quantity</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="p : ${productList}">
+            <td th:text="${p.id}"></td>
+            <td th:text="${p.name}"></td>
+            <td th:text="${p.price}"></td>
+            <td th:text="${p.quantity}"></td>
+            <td>
+                <a class="btn btn-danger"
+                   th:href="@{/delete(id=${p.id})}"
+                   onclick="return confirm('Êtes-vous sûr ?')">
+                    Delete
+                </a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+
+<script src="/webjars/bootstrap/5.3.5/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
