--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -2,6 +2,7 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorate="~{layout1}">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +10,7 @@
 </head>
 <body>
 <div class="p-3" layout:fragment="content">
-    <div class="p-3">
+    <div class="p-3" sec:authorize="hasRole('ADMIN')">
          <a class="btn btn-primary" th:href="@{/admin/newProduct}">New Product</a>
 
     </div>
@@ -29,12 +30,11 @@
             <td th:text="${p.name}"></td>
             <td th:text="${p.price}"></td>
             <td th:text="${p.quantity}"></td>
-            <td>
-                <a class="btn btn-danger"
-                   th:href="@{/admin/delete(id=${p.id})}"
-                   onclick="return confirm('Êtes-vous sûr ?')">
-                    Delete
-                </a>
+            <td sec:authorize="hasRole('ADMIN')">
+                <form th:action="@{/admin/delete(id=${p.id})}" method="post">
+                    <button type="submit" class="btn btn-danger">Delete</button>
+                </form>
+
             </td>
         </tr>
         </tbody>
